Use Caliburn.Micro nuget package

--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="3.2.0" targetFramework="net461" />
+  <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net452" />
   <package id="Inflatable.Lastfm" version="1.0.1.307" targetFramework="net452" />
   <package id="Inflatable.Lastfm.SQLite" version="0.2.0.211" targetFramework="net452" />
