--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="3.2.0" targetFramework="net461" />
+  <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.0.1.307" targetFramework="net461" />
   <package id="Moq" version="4.8.1" targetFramework="net461" />
