Wrap TagLib file

--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Interfaces\ILastFMApiBase.cs" />
     <Compile Include="Interfaces\ILastFMClient.cs" />
     <Compile Include="Interfaces\ILastFMClientFactory.cs" />
+    <Compile Include="Interfaces\ILocalFileFactory.cs" />
     <Compile Include="Interfaces\IScrobblerFactory.cs" />
     <Compile Include="Interfaces\ITextFieldParser.cs" />
     <Compile Include="Interfaces\ITextFieldParserFactory.cs" />
@@ -166,8 +167,11 @@
     <Compile Include="Models\AuthSQLiteScrobbler.cs" />
     <Compile Include="Models\CSVTextFieldParser.cs" />
     <Compile Include="Models\CSVTextFieldParserFactory.cs" />
+    <Compile Include="Interfaces\ILocalFile.cs" />
     <Compile Include="Models\LastFMClient.cs" />
     <Compile Include="Models\LastFMClientFactory.cs" />
+    <Compile Include="Models\LocalFile.cs" />
+    <Compile Include="Models\LocalFileFactory.cs" />
     <Compile Include="Models\Release.cs" />
     <Compile Include="Models\ScrobbleBase.cs" />
     <Compile Include="Models\ScrobblerFactory.cs" />
