--- a/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
+++ b/Last.fm-Scrubbler-WPF-Test/Last.fm-Scrubbler-WPF-Test.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScrobblerTests\CSVScrobbleTest.cs" />
+    <Compile Include="ScrobblerTests\FileScrobblerTest.cs" />
     <Compile Include="ScrobblerTests\FriendScrobbleTest.cs" />
     <Compile Include="ScrobblerTests\ManualScrobblerTest.cs" />
     <Compile Include="TestHelper.cs" />
